Wed Jun 12 15:00:57 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* parse.y (stmt): fix typo.

Wed Jun 12 01:10:40 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (singleton): "def (()).a end" dumped core.

	* parse.y (cond2): node may be null.

	* parse.y (match_gen): ditto.

Tue Jun 11 17:12:04 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (arg): void value check for "..", "...", "!", and "not".

	* parse.y (match_gen): void value check for "=~".

	* parse.y (value_expr): check NODE_AND and NODE_OR recursively.

	* parse.y (cond0): void value check added for conditionals.

Mon Jun 10 19:02:19 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* numeric.c (fix_lshift): negative shift count means right shift.
	  (ruby-bugs-ja:PR#248)

	* numeric.c (fix_rshift): return -1 when left side operand is
	  negative. (ruby-bugs-ja:PR#247)

	* parse.y (yylex): `0_' should be an error. (ruby-bugs-ja:PR#249)

Mon Jun 10 01:53:54 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): ruby_frame->last_func may be null, if it's
	  called outside of a method.

	* parse.y (arg): use INT2NUM, not INT2FIX for tUMINUS.

	* parse.y (arg): $1 may be null for tPOW.

Sat Jun  8 00:48:38 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (stmt,arg): too much void value check.

	* parse.y (arg): need to check void value on rules which does not
	  use node_assign().

Thu Jun  6 17:42:39 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (ipaddr): need not to taint hostnames.

Wed Jun  5 18:53:06 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* math.c (Init_Math): backport asin, acos, atan.

Tue Jun  4 00:45:50 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ext/socket/addrinfo.h: typo.

	* ext/socket/socket.c (init_inetsock): ensures resources are
	  freed at exceptions.

	* ext/socket/socket.c (init_unixsock): ditto.

	* ext/socket/socket.c (udp_connect): ditto.
